Prevent quick flickering when tapping on items on phone

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-tap-highlight-color: transparent; /*Prevent quick flickering. Find more here; https://stackoverflow.com/questions/3516173/ipad-safari-how-to-disable-the-quick-blinking-effect-when-a-link-has-been-hit */
 
     --navbar-height: max(10vh, 5rem);
 
